# motorrijtuigenbelasting

./: .gitignore  README.md  alles_benzine.json  constants.py  generator.py  mrb.py  opcenten.py  pyproject.toml  taxes.py  vehicle_types.py
.devcontainer/: devcontainer.json
.github/workflows/: python-tests.yaml
motorrijtuigenbelasting/: __init__.py
motorrijtuigenbelasting/vehicles/: __init__.py  car.py  constants.py  van.py
output/: benzine.json
tests/: test_car.py  test_motorcycle.py  test_mrb.py  test_mrb_2024.py  test_taxes.py  test_van.py  test_vehicle.py
vehicles/: __init__.py  car.py  constants.py  motorcycle.py
